Fix Error and align bio info in the card.

--- a/src/components/ResultCard/ResultCard.css
+++ b/src/components/ResultCard/ResultCard.css
@@ -2,7 +2,7 @@
 	border: 0.5px solid rgba(69, 123, 157, 1);
 	display: flex;
 	flex-direction: row;
-  justify-content: space-between;
+	justify-content: space-between;
 	align-items: flex-start;
 	margin: 2em;
 	background-color: #1d3557;
@@ -20,7 +20,8 @@
 .card-info {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-end;
+	margin-top: 10px;
+	margin-right: 10px;
 }
 
 .card-info h3 {
